tests/ifcc-test-output/testfiles-if_then_else_while_for-continue_error/gcc-compile.txt
input.c:4:5: error: 'continue' statement not in loop statement
    continue;
    ^
1 error generated.

return code: 1
